Fix issue that caused setting the step state twice during re-usability implementation
Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>